<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="178dp"
    android:background="#2f74e2"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/setting24"
            android:background="@null"
            android:id="@+id/buttonSetting"
            android:onClick="startSettingIntent" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/edit24"
            android:id="@+id/editProfileButton"
            android:background="@null"
            android:onClick="startEditProfilesIntent"
            android:layout_toStartOf="@+id/addProfileButton" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/addlist24"
            android:id="@+id/addProfileButton"
            android:background="@null"
            android:layout_alignParentRight="true"
            android:onClick="startNewProfileIntent" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/selectedProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:textColor="#ffffff"
            android:text="Profile"
            android:textSize="30sp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:id="@+id/linearHeaderImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>