<resources>
    <string name="app_name">OneClickUpload</string>
    <string name="title_activity_settings">Settings</string>

    <array name="accountIcons">
        <item>@drawable/facebookon</item>
        <item>@drawable/twitteron</item>
    </array>
    <string-array name="accountType">
        <item>Facebook</item>
        <item>Twitter</item>
    </string-array>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="newProfileName">Profile Name(Required)</string>
    <string name="newProfileText">Upload Text(Optional)</string>
    <string name="newProfileAccount">Account(Required)</string>

    <string name="initial_upload_string">Swipe Left to Upload\nSwipe Right to Dismiss</string>
    <string name="start_facebook_upload">Facebook Status: Uploading</string>
    <string name="finish_facebook_upload">Facebook Status: Uploaded</string>
    <string name="failed_facebook_upload">Facebook Status: Failed</string>
    <string name="start_twitter_upload">Twitter Status: Uploading</string>
    <string name="finish_twitter_upload">Twitter Status: Uploaded</string>
    <string name="failed_twitter_upload">Twitter Status: Failed</string>
    <string name="all_uploaded">Photo Uploaded to All Accounts\nSwipe Right to Dismiss</string>

    <string name="required_field_alert">Please enter all required fields</string>
    <string name="discard_changes_title">Discarding Changes</string>
    <string name="discard_changes_message">Are you sure you want to close this activity without saving changes?</string>
</resources>
